--- a/src/app/components/forms/inputs/form-checkbox/form-checkbox.component.html
+++ b/src/app/components/forms/inputs/form-checkbox/form-checkbox.component.html
@@ -22,5 +22,4 @@
   [fieldName]="fieldName"
   [fieldText]="label"
   [form]="form"
-  [submitted]="submitted">
-</aw-field-error>
+  [submitted]="submitted" />
