--- a/src/app/components/forms/inputs/form-floating/form-floating.component.html
+++ b/src/app/components/forms/inputs/form-floating/form-floating.component.html
@@ -22,6 +22,5 @@
     [fieldName]="fieldName"
     [fieldText]="label"
     [form]="form"
-    [submitted]="submitted">
-  </aw-field-error>
+    [submitted]="submitted" />
 </ng-container>
