--- a/src/app/components/forms/inputs/form-input/form-input.component.html
+++ b/src/app/components/forms/inputs/form-input/form-input.component.html
@@ -22,7 +22,6 @@
       [fieldName]="fieldName"
       [fieldText]="label"
       [form]="form"
-      [submitted]="submitted">
-    </aw-field-error>
+      [submitted]="submitted" />
   </ng-container>
 </div>
