--- a/src/app/components/selectors/timezone-selector/timezone-selector.component.html
+++ b/src/app/components/selectors/timezone-selector/timezone-selector.component.html
@@ -1,1 +1,1 @@
-<ng-select [items]="timezones" [(ngModel)]="timezoneSelected" (change)="handleChangeTimezone()"></ng-select>
+<ng-select (change)="handleChangeTimezone()" [(ngModel)]="timezoneSelected" [items]="timezones" />
