--- a/src/app/components/spinner/spinner.component.html
+++ b/src/app/components/spinner/spinner.component.html
@@ -8,6 +8,6 @@
       <span class="ml-2">&nbsp;{{ text }}</span>
     </ng-container>
 
-    <ng-content></ng-content>
+    <ng-content />
   </div>
 </ng-container>
