--- a/src/app/components/tables/table-loading/table-loading.component.html
+++ b/src/app/components/tables/table-loading/table-loading.component.html
@@ -1,8 +1,8 @@
 <!-- spinner -->
 <ng-container *ngIf="loading">
   <tr>
-    <td colspan="100%" class="text-center">
-      <aw-spinner [size]="100" [loading]="loading"></aw-spinner>
+    <td class="text-center" colspan="100%">
+      <aw-spinner [loading]="loading" [size]="100" />
     </td>
   </tr>
 </ng-container>
