--- a/src/app/components/views/view-header/view-header.component.html
+++ b/src/app/components/views/view-header/view-header.component.html
@@ -1,12 +1,12 @@
 <aw-card>
   <h3>
-    <ng-content></ng-content>
+    <ng-content />
     <span class="fs-5">
-      <ng-content select="[awHeaderSubtitle]"></ng-content>
+      <ng-content select="[awHeaderSubtitle]" />
     </span>
   </h3>
 
-  <aw-breadcrumb [breadcrumb]="breadcrumb"></aw-breadcrumb>
+  <aw-breadcrumb [breadcrumb]="breadcrumb" />
 </aw-card>
 
 <div class="mt-2"></div>
