--- a/src/app/components/forms/inputs/form-textarea/form-textarea.component.html
+++ b/src/app/components/forms/inputs/form-textarea/form-textarea.component.html
@@ -23,7 +23,6 @@
       [fieldName]="fieldName"
       [fieldText]="label"
       [form]="form"
-      [submitted]="submitted">
-    </aw-field-error>
+      [submitted]="submitted" />
   </ng-container>
 </div>
