--- a/src/app/components/forms/inputs/form-timezone/form-timezone.component.html
+++ b/src/app/components/forms/inputs/form-timezone/form-timezone.component.html
@@ -21,7 +21,6 @@
       [fieldName]="fieldName"
       [fieldText]="label"
       [form]="form"
-      [submitted]="submitted">
-    </aw-field-error>
+      [submitted]="submitted" />
   </ng-container>
 </div>
