--- a/src/app/views/time-control-records/time-control-record-list/time-control-record-list.component.html
+++ b/src/app/views/time-control-records/time-control-record-list/time-control-record-list.component.html
@@ -30,12 +30,18 @@
       </thead>
 
       <tbody *ngIf="apiResult" awTbody>
-        <tr (click)="handleSelectItem(timeControl)" *ngFor="let timeControl of apiResult.items" class="cursor-pointer">
+        <tr *ngFor="let timeControl of apiResult.items">
           <td>{{ timeControl.firstName }}</td>
           <td>{{ timeControl.lastName }}</td>
           <td>
             <span [innerHTML]="timeControl.deviceTypeStart | deviceType"></span>
             {{ timeControl.start | datetime }}
+
+            <ng-container *ngIf="getStartOpenStreetMapLink(timeControl)">
+              <a [href]="getStartOpenStreetMapLink(timeControl)" target="_blank">
+                <span awTooltip title="Ver en mapa" class="fa-solid fa-location-pin text-success"></span>
+              </a>
+            </ng-container>
           </td>
           <td>
             <ng-container *ngIf="timeControl.timeState === timeState.open">
@@ -44,6 +50,12 @@
 
             <ng-container *ngIf="timeControl.timeState === timeState.close">
               {{ timeControl.finish | datetime }}
+
+              <ng-container *ngIf="getFinishOpenStreetMapLink(timeControl)">
+                <a [href]="getFinishOpenStreetMapLink(timeControl)" target="_blank">
+                  <span awTooltip title="Ver en mapa" class="fa-solid fa-location-pin text-success"></span>
+                </a>
+              </ng-container>
             </ng-container>
           </td>
           <td>{{ timeControl.closedBy | closedBy }}</td>
@@ -57,6 +69,7 @@
             </ng-container>
           </td>
           <td>{{ timeControl.duration | durationToTime }}</td>
+          <td></td>
         </tr>
       </tbody>
     </aw-table>
