--- a/src/app/views/time-control-records/time-control-record-list/time-control-record-list.component.html
+++ b/src/app/views/time-control-records/time-control-record-list/time-control-record-list.component.html
@@ -75,7 +75,9 @@
 
             <ng-container *ngIf="timeControl.duration === 0"> - </ng-container>
           </td>
-          <td>&nbsp;</td>
+          <td>
+            <span (click)="handleTimeControlModalEdit(timeControl)" class="fa-solid fa-pencil cursor-pointer"></span>
+          </td>
         </tr>
       </tbody>
     </aw-table>
