--- a/src/app/views/time-control-records/time-control-record-edit/time-control-record-edit.component.html
+++ b/src/app/views/time-control-records/time-control-record-edit/time-control-record-edit.component.html
@@ -8,7 +8,7 @@
 
   <!-- body -->
   <div class="modal-body">
-    <ng-container *ngIf="timeControl">
+    <ng-container *ngIf="timeControl && !loadingForm">
       <form (ngSubmit)="handleSubmit()" [formGroup]="form">
         <!-- timezone -->
         <div class="mb-2">
@@ -83,6 +83,10 @@
         </div>
         <!-- end footer -->
       </form>
+
+      <ng-container *ngIf="loadingForm">
+        <aw-spinner [loading]="loadingForm" [size]="100" />
+      </ng-container>
     </ng-container>
   </div>
   <!-- end body -->
