npx prettier . --write

--- a/src/app/components/tables/table-header/table-header.component.html
+++ b/src/app/components/tables/table-header/table-header.component.html
@@ -30,9 +30,7 @@
         </ng-container>
 
         <ng-container *ngIf="header.orderType === orderTypes.none">
-          <span class="ml-auto opacity3">
-            &nbsp;<span class="icon fas fa-arrows-alt-v"></span>
-          </span>
+          <span class="ml-auto opacity3"> &nbsp;<span class="icon fas fa-arrows-alt-v"></span> </span>
         </ng-container>
         <!-- end sort order -->
       </div>
