--- a/src/app/views/accounts/register/register.component.html
+++ b/src/app/views/accounts/register/register.component.html
@@ -96,10 +96,7 @@
 
         <a [routerLink]="[siteUrls.auth.login]" class="small">Identificarse</a>
 
-        <aw-btn-loading
-          [loading]="loading"
-          btnClass="w-100 btn btn-lg btn-primary mt-2"
-          btnText="Registrar" />
+        <aw-btn-loading [loading]="loading" btnClass="w-100 btn btn-lg btn-primary mt-2" btnText="Registrar" />
       </form>
     </aw-card>
   </div>
