Anadido warning a tiempos no cerrados por el empleado

--- a/src/app/views/time-control-records/time-control-record-list/time-control-record-list.component.html
+++ b/src/app/views/time-control-records/time-control-record-list/time-control-record-list.component.html
@@ -58,7 +58,12 @@
               </ng-container>
             </ng-container>
           </td>
-          <td>{{ timeControl.closedBy | closedBy }}</td>
+          <td>
+            <ng-container *ngIf="timeControl.closedBy === closedBy.staff || timeControl.closedBy === closedBy.system">
+              <span class="fa-solid fa-exclamation text-danger"></span>
+            </ng-container>
+            {{ timeControl.closedBy | closedBy }}
+          </td>
           <td>
             <ng-container *ngIf="timeControl.timeState === timeState.open">
               <aw-dot-success />
